syntax = "proto3";

package auth;
option go_package = "./authpb";

// The AuthValidation service definition.
service AuthValidation {
  // RPC for stateless token validation
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

// Request message for ValidateToken
message ValidateTokenRequest {
  string token = 1;
}

// Response message for ValidateToken
message ValidateTokenResponse {
  bool is_valid = 1;
  int32 user_id = 2; // User ID extracted from the token claims
  string error = 3; // Error message if not valid
}